tests/programs/invalid/test_native.java
public class test_native {
    public native int m();
}